welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime9.FlowerCase'
override def run() {
             ^